Resolves: tdf#118659 eps not shown

since...

commit 7b355669c6ddeab2e6cec692d6afdff41c61d0fb
Date:   Sat Apr 14 15:13:05 2018 +0900

    Function to load graphic swapped out (loaded on demand)

new function doesn't load the eps, so supposed to fall back
to the old function, but the new function didn't leave
the stream at its original position on failing to attempt
the load

Change-Id: I960574722687cf5ad8c78be7339d2ce6b74397a9